--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.joblib filter=lfs diff=lfs merge=lfs -text
+datasets/cleaned/clean_numTOper_entropy_136k.csv filter=lfs diff=lfs merge=lfs -text
